--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
 
             <div class="find">
                 <input type="text" class="search">
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <i class="fa-solid fa-ellipsis"></i>
+                <i class="fa-solid fa-magnifying-glass sc"></i>
+                
             </div>
 
             <div class="time">
