--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
             </div>
 
             <div class="center">
-                <img src="./assets/icons/mist.svg" alt="">
+                <img src="./assets/icons/mist.svg" alt="" id="icon">
             </div>
 
             
